<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" >
    <Button android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch"/>

    <Button android:id="@+id/start_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_normal" />

    <Button android:id="@+id/start_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_dialog" />
</LinearLayout>
